# this

./: .gitignore  .gitmodules  LICENSE  README.md
decode-lambda/: collect.sh  decode.py
decode-scanner/: .gitignore  CMakeLists.txt  decoder_automata_cmd.cpp
end_to_end/: .gitignore  clear.sh  end2end_fuse.py  end2end_fused_hist.py  end2end_fused_mxnet.py  end2end_mxnet.py  fake_op.py  pymxnet_op.py  runfused-hist.sh  runfused-mxnet.sh  runtest.sh
fused-decode-hist/: fused_decoder_hist.cpp
kernel_dev/: .gitignore  CMakeLists.txt  main.cpp
lambdas/decode-ffmpeg-lambda/: test_one_file_to_many.py
lambdas/decode-scanner-lambda/: .gitignore  collect.sh  decode_args0.proto  decode_args1000.proto  lambda.py  runtest.sh
lambdas/fused-decode-hist-lambda/: collect.sh  lambda.py  runtest.sh
lambdas/fused-decode-mxnet-lambda/: .gitignore  collect.sh  lambda.py  outlogs.txt  package-lock.json  package.json  requirements.txt  serverless.yml  template.yaml
lambdas/fused-decode-mxnet-lambda/Pillow-4.3.0.dist-info/: RECORD
lambdas/fused-decode-mxnet-lambda/graphviz/: __init__.py  _compat.py  dot.py  files.py  lang.py
lambdas/fused-decode-mxnet-lambda/graphviz-0.8.1.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
lambdas/fused-decode-mxnet-lambda/mxnet/: COMMIT_HASH
lambdas/fused-decode-mxnet-lambda/mxnet-0.11.0.dist-info/: DESCRIPTION.rst  METADATA  RECORD  WHEEL  metadata.json
lambdas/fused-decode-mxnet-lambda/numpy-1.13.3.dist-info/: RECORD
lambdas/fused-decode-mxnet-lambda/olefile-0.44.dist-info/: RECORD  metadata.json
lambdas/mxnet-serverless/: .gitignore  lambda_function.py  package-lock.json  requirements.txt  run_lambda.sh
log_parser/: .gitignore  local_log_parser.py  plot_log_data.py  s3_log_parser.py
mxnet-scanner/: mxnet_lambda.py
mxnet-scanner/lambda_op/: CMakeLists.txt  mxnetlambda_op.cpp
mxnet-serverless/: lambda_function.py  package-lock.json  package.json  run_lambda.sh  runtest.sh  serverless.yml  template.yaml
src/decode-scanner/: CMakeLists.txt  decoder_automata_cmd.cpp
src/fused-decode-hist/: .gitignore  CMakeLists.txt
src/kernel_dev/: main.cpp
tests/: histogram.py  util.py
tests/jpeg-encode/: encode_benchmark.py
tests/jpeg_encode/: encode_benchmark.py
tests/lambda-executable/: README.md
tests/lambda-executable/src/: event.json  run_sam.sh
tests/lambda-executable/src/executables/: hello
tests/lambda_executable/: lambda_function.py  run_sam.sh  template.yaml
tests/lambda_executable/src/: event.json  executable.py  lambda_function.py
tests/mxnet-pyscanner/: mxnet_pyscanner.py  runtest.sh
tests/mxnet-pyscanner/pymxnet_op/: pymxnet_op.py
tests/mxnet-scanner/: mxnet_lambda.py  runtest.sh
tests/mxnet-scanner/lambda_op/: CMakeLists.txt  mxnetlambda.proto  mxnetlambda_op.cpp
tests/networking/: .gitignore  lambda_client.py  socket_server.py
tests/origin/: clear.sh  histogram.py  histogram_example.py  run_hist.sh  run_shot.sh  runtest.sh  shot_detect.py
